--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "angular": "^1.4.3",
-    "lodash": "^3.10.0",
-    "normalize.css": "^3.0.3"
+    "lodash": "^3.10.0"
   }
 }
