--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-core": "^5.2.1",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
     "browser-sync": "^2.8.2",
     "css-loader": "^0.15.6",
+    "csswring": "^3.0.5",
     "gulp": "^3.9.0",
     "gulp-webpack": "^1.5.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "postcss-loader": "^0.5.1",
+    "postcss-nested": "^0.3.2",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.1.2",
     "style-loader": "^0.12.3",
